--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script>
       var socket = io.connect("http://localhost:3000");
+	socket.on("connect" , function() {
+		socket.emit("rot-y", 0.1);
+	});
     </script>
   </head>
   <body>
@@ -24,3 +27,4 @@
     </form>
   </body>
 </html>
+
