--- a/public/debug.html
+++ b/public/debug.html
@@ -3,7 +3,7 @@
 <head>
     <title>Socket.IO chat</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <style>
         * {
             margin: 0;
