--- a/public/debug.html
+++ b/public/debug.html
@@ -65,6 +65,13 @@
 </form>
 </body>
 <script>
+    function display(q, msg){
+        if(msg instanceof Object){
+            msg = JSON.stringify(msg);
+        }
+        console.log(msg);
+        $('#messages').append($('<li>').text(q +": " + msg));
+    }
     window.onload = function () {
         var socket = io();
         socket.on("connect", function () {
@@ -77,16 +84,13 @@
             return false;
         });
         socket.on("queue-1", function (msg) {
-            console.log(msg);
-            $('#messages').append($('<li>').text("queue-1: " + msg));
+            display("queue-1",  msg);
         });
         socket.on("queue-2", function (msg) {
-            console.log(msg);
-            $('#messages').append($('<li>').text("queue-2: " + msg));
+            display("queue-2",  msg);
         });
         socket.on("queue-3", function (msg) {
-            console.log(msg);
-            $('#messages').append($('<li>').text("queue-3: " + msg));
+            display("queue-3",  msg);
         });
     }
 </script>
