--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <div id="stats">
     <div id="customer_stats">Customer ETA(mins): </div>    
     <div id="ola_stats">OLA CAB ETA(mins): </div>
+    <div id="booking_status">Status: </div>
     </div>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApFZ8ShanH3gSCHh9AX2FtMjHg3IxbP8w&callback=initMap"
